# TemperatureSensorApp

./: README.md  data_vis.ipynb  db_connector.py  graph_temp.py  home_assistant_sensor.py  inkbirdsensor.py  mini_temp_app.py  new_temp_app.py  pyproject.toml  read_sensor.py  read_temp.py  refactore_temp_app.py  sensor_card.py  temperature_app.py  thermometer.py
TuringCompleteTemperatureApp/: notification.py  read_sensor.py  temperature.app  temperature.py
TuringCompleteTemperatureApp/templates/: index.html
assets/: style.css
templates/: index.html
utils/: NotificationSystem.py
